feat: As a Central Server Administrator I want to be able to define my TSA and OCSP as free or paid so that users can make a choice based on the information
CR, Sonar and i18n changes

refs: XRDDEV-2979

--- a/src/central-server/admin-service/ui/src/locales/pt-BR.json
+++ b/src/central-server/admin-service/ui/src/locales/pt-BR.json
@@ -660,6 +660,12 @@
      },
      "timestampingServices":"Serviços de Carimbo do Tempo",
      "trustService":{
+       "cost":"Custo",
+       "costType":{
+         "FREE":"Gratuito",
+         "PAID":"Pago",
+         "UNDEFINED":"Indefinido"
+       },
         "delete":{
            "action":"Excluir serviço de confiança",
            "confirmationDialog":{
@@ -725,12 +731,6 @@
            "tlsAuth":"Esta AC pode ser usada apenas para autenticação TLS"
         },
         "timestampingService":{
-           "cost":"Custo",
-           "costValues":{
-              "FREE":"Gratuito",
-              "PAID":"Pago",
-              "UNDEFINED":"Indefinido"
-           },
            "delete":{
               "dialog":{
                  "message":"Tem certeza de que deseja excluir o serviço de carimbo do tempo com a URL {url}?",
