--- a/src/central-server/admin-service/ui/src/locales/es.json
+++ b/src/central-server/admin-service/ui/src/locales/es.json
@@ -649,6 +649,12 @@
     },
     "timestampingServices": "Servicios de marca de tiempo",
     "trustService": {
+      "cost": "Costo",
+      "costType": {
+        "FREE": "Gratis",
+        "PAID": "Pago",
+        "UNDEFINED": "No definido"
+      },
       "delete": {
         "action": "Eliminar el servicio de confianza",
         "confirmationDialog": {
@@ -714,12 +720,6 @@
         "tlsAuth": "Esta CA solo se puede usar para la autenticación TLS"
       },
       "timestampingService": {
-        "cost": "Costo",
-        "costValues": {
-          "FREE": "Gratis",
-          "PAID": "Pago",
-          "UNDEFINED": "No definido"
-        },
         "delete": {
           "dialog": {
             "message": "¿Estás seguro de que quieres eliminar el servicio de marca de tiempo con la URL {URL}?",
