--- a/src/security-server/admin-service/ui/src/locales/et.json
+++ b/src/security-server/admin-service/ui/src/locales/et.json
@@ -5,7 +5,7 @@
     "addServiceClientsTitle": "Lisa ligipääs",
     "addSubjectsSuccess": "Ligipääs edukalt antud",
     "id": "ID",
-    "memberName": "Alamsüsteemi nimi / Rühma kirjeldus",
+    "subsystemName": "Alamsüsteemi nimi / Rühma kirjeldus",
     "removeAllText": "Kas olete kindel, et soovite kõikidelt klientidelt pääsuõigused eemaldada?",
     "removeAllTitle": "Eemalda kõik pääsuõigused?",
     "removeSuccess": "Pääsuõigused edukalt eemaldatud",
@@ -802,7 +802,7 @@
     "enableSuccess": "Teenuse kirjeldus aktiveeritud",
     "idGroupCode": "ID / Grupi kood",
     "lastRefreshed": "Viimati värskendatud:",
-    "memberNameGroupDesc": "Alamsüsteemi nimi / Grupi kirjeldus",
+    "subsystemNameGroupDesc": "Alamsüsteemi nimi / Grupi kirjeldus",
     "noMatches": "Sobivad kirjed puuduvad",
     "openApi3Added": "OpenApi teenus lisatud",
     "openapiDetails": "OpenAPI teenuse detailid",
