--- a/src/security-server/admin-service/ui/src/locales/tk.json
+++ b/src/security-server/admin-service/ui/src/locales/tk.json
@@ -5,7 +5,7 @@
     "addServiceClientsTitle": "Subýektleri goş",
     "addSubjectsSuccess": "Giriş hukuklary üstünlikli goşuldy",
     "id": "ID",
-    "memberName": "Kiçi ulgamyň ady / Toparyň beýany",
+    "subsystemName": "Kiçi ulgamyň ady / Toparyň beýany",
     "removeAllText": "Are you sure you want to remove access rights from all clients?",
     "removeAllTitle": "Ähli giriş hukuklary aýyrmalymy?",
     "removeSuccess": "Giriş hukuklary üstünlikli aýryldy",
@@ -722,7 +722,7 @@
     "enableSuccess": "Gulluk beýany işledildi",
     "idGroupCode": "ID / Topar kody",
     "lastRefreshed": "Soňky täzelenme: ",
-    "memberNameGroupDesc": "Kiçi ulgamyň ady / Toparyň beýany",
+    "subsystemNameGroupDesc": "Kiçi ulgamyň ady / Toparyň beýany",
     "noMatches": "Gabat gelýän ýazgylar ýok",
     "openApi3Added": "OpenApi3 gullugy goşuldy",
     "openapiDetails": "OpenAPI 3 jikme-jikleri",
