--- a/src/security-server/admin-service/ui/src/locales/ru.json
+++ b/src/security-server/admin-service/ui/src/locales/ru.json
@@ -5,7 +5,7 @@
     "addServiceClientsTitle": "Добавить объекты",
     "addSubjectsSuccess": "Права доступа успешно добавлены",
     "id": "ID",
-    "memberName": "Имя участника / Описание группы",
+    "subsystemName": "Название подсистемы / Описание группы",
     "removeAllText": "Вы уверены, что хотите удалить права доступа у всех клиентов?",
     "removeAllTitle": "Удалить все права доступа?",
     "removeSuccess": "Права доступа успешно удалены",
@@ -692,7 +692,7 @@
     "id": "ID",
     "memberGroupCodeLabel": "Код участника/группы",
     "memberGroupStep": "Участник / Группа",
-    "name": "Имя участника / Описание группы",
+    "name": "Название подсистемы / Описание группы",
     "noAccessRights": "Нет прав доступа к этому клиенту",
     "noAvailableServices": "Нет доступных служб",
     "removeAll": "Удалить все",
@@ -722,7 +722,7 @@
     "enableSuccess": "Описание сервиса включено",
     "idGroupCode": "ID / Код группы",
     "lastRefreshed": "Последнее обновление: ",
-    "memberNameGroupDesc": "Имя участника / Описание группы",
+    "subsystemNameGroupDesc": "Название подсистемы / Описание группы",
     "noMatches": "Нет совпадающих записей",
     "openApi3Added": "Сервис OpenApi3 добавлен",
     "openapiDetails": "Детали OpenAPI 3",
