--- a/src/security-server/admin-service/ui/src/locales/pt-BR.json
+++ b/src/security-server/admin-service/ui/src/locales/pt-BR.json
@@ -5,7 +5,7 @@
     "addServiceClientsTitle": "Adicionar clientes",
     "addSubjectsSuccess": "Direitos de acesso adicionados com sucesso",
     "id": "ID",
-    "memberName": "Nome do Membro / Descrição do Grupo",
+    "subsystemName": "Nome do subsistema / Descrição do grupo",
     "removeAllText": "Tem certeza de que deseja remover os direitos de acesso de todos os clientes?",
     "removeAllTitle": "Remover todos os direitos de acesso?",
     "removeSuccess": "Direitos de acesso removidos com sucesso",
@@ -772,7 +772,7 @@
     "id": "ID",
     "memberGroupCodeLabel": "Código do Membro / Grupo",
     "memberGroupStep": "Membro / Grupo",
-    "name": "Nome do Membro (Subsistema) / Descrição do Grupo",
+    "name": "Nome do subsistema / Descrição do grupo",
     "noAccessRights": "Sem direitos de acesso a este cliente",
     "noAvailableServices": "Nenhum serviço disponível",
     "removeAll": "Remover todos",
@@ -802,7 +802,7 @@
     "enableSuccess": "Descrição do serviço ativada",
     "idGroupCode": "ID / Código do grupo",
     "lastRefreshed": "Última atualização: ",
-    "memberNameGroupDesc": "Nome do membro / Descrição do grupo",
+    "subsystemNameGroupDesc": "Nome do subsistema / Descrição do grupo",
     "noMatches": "Nenhum registro correspondente",
     "openApi3Added": "Serviço OpenAPI 3 adicionado",
     "openapiDetails": "Detalhes OpenAPI 3",
