--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -356,7 +356,7 @@
         "soap": "SOAP",
         "title": "Other Security Server",
         "target": "Target",
-        "targetInfo": "Instance, client, security server",
+        "targetInfo": "Instance, client, security server"
       }
     }
   },
