--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -818,6 +818,7 @@
     "updated": "Updated"
   },
   "noData": {
+    "dataLoading": "Loading data...",
     "noBackUpEncryptionKeys": "No configured backup encryption keys",
     "noCertificateAuthorities": "No certificate authorities",
     "noClientData": "No client data",
