fix: minor ui changes and document updates

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -347,7 +347,7 @@
       },
       "securityServer": {
         "client": "Client",
-        "current": "Current Client",
+        "sourceClient": "Source Client",
         "rest": "REST",
         "securityServer":  "Security Server",
         "soap": "SOAP",
