--- a/src/security-server/admin-service/ui/src/locales/et.json
+++ b/src/security-server/admin-service/ui/src/locales/et.json
@@ -342,7 +342,7 @@
       },
       "securityServer": {
         "client": "Klient",
-        "current": "Kehtiv klient",
+        "sourceClient": "Lähteklient",
         "rest": "REST",
         "securityServer":  "Turvaserver",
         "soap": "SOAP",
