--- a/src/security-server/admin-service/ui/src/locales/ru.json
+++ b/src/security-server/admin-service/ui/src/locales/ru.json
@@ -271,7 +271,7 @@
       },
       "securityServer": {
         "client": "Клиент",
-        "current": "Текущий клиент",
+        "sourceClient": "Исходный клиент",
         "rest": "REST",
         "securityServer": "Сервер безопасности",
         "soap": "SOAP",
