--- a/src/packages/src/xroad/ubuntu/generic/changelog
+++ b/src/packages/src/xroad/ubuntu/generic/changelog
@@ -1,3 +1,10 @@
+xroad (7.7.1-1) stable; urgency=medium
+
+  * Change history is found at /usr/share/doc/xroad-
+    common/CHANGELOG.md.gz
+
+ -- NIIS <info@niis.org>  Thu, 08 Des 2025 11:23:07 +0300
+
 xroad (7.7.0-1) stable; urgency=medium
 
   * Change history is found at /usr/share/doc/xroad-
