fix: Incorrect CSR generation for ACME when using the PEM format
refs: XRDDEV-3062

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -480,6 +480,7 @@
     "invalid_init_params": "Invalid initialisation parameters",
     "invalid_instance_identifier": "Invalid instance identifier",
     "invalid_member_class": "Invalid member class",
+    "invalid_pem_csr": "Invalid PEM CSR",
     "invalid_service_client_id": "Invalid service client ID",
     "invalid_service_url": "Invalid service url",
     "invalid_wsdl": "Invalid WSDL",
@@ -491,9 +492,9 @@
     "local_group_member_already_exists": "Local group member already exists",
     "local_group_member_not_found": "Local group member not found",
     "local_group_not_found": "Local group not found",
+    "maintenance_mode_change_request_already_submitted": "Maintenance mode change is already pending",
     "malformed_anchor": "Malformed anchor",
     "malformed_global_conf": "Malformed global configuration",
-    "maintenance_mode_change_request_already_submitted": "Maintenance mode change is already pending",
     "malformed_url": "Malformed URL",
     "management_request_sending_failed": "Sending of management request failed",
     "member_already_owner": "Member is already the owner",
