--- a/src/security-server/admin-service/ui/src/locales/pt-BR.json
+++ b/src/security-server/admin-service/ui/src/locales/pt-BR.json
@@ -455,6 +455,7 @@
     "invalid_init_params": "Parâmetros de inicialização inválidos",
     "invalid_instance_identifier": "Identificador de instância inválido",
     "invalid_member_class": "Classe de membro inválida",
+    "invalid_pem_csr": "CSR PEM inválido",
     "invalid_service_client_id": "ID de cliente de serviço inválido",
     "invalid_service_url": "URL de serviço inválida",
     "invalid_wsdl": "WSDL inválido",
@@ -466,8 +467,8 @@
     "local_group_member_already_exists": "Membro do grupo local já existe",
     "local_group_member_not_found": "Membro do grupo local não encontrado",
     "local_group_not_found": "Grupo local não encontrado",
-    "malformed_anchor": "Âncora malformada",
     "maintenance_mode_change_request_already_submitted": "Já existe uma solicitação pendente para alteração do modo de manutenção",
+    "malformed_anchor": "Âncora malformada",
     "malformed_url": "URL malformada",
     "management_request_sending_failed": "Falha ao enviar solicitação de gerenciamento",
     "member_already_owner": "Membro já é o proprietário",
